--- a/index.html
+++ b/index.html
@@ -33,10 +33,25 @@
             <div id="logo">
                 <h1>CarolFlix</h1>
                 <p>Classifique seus filmes e séries</p>
+                <button id="sobrebtn">Sobre o CarolFlix</button>
                 <button id="carregarbtn">Carregue suas listas</button>
                 <p class="confirmacao">Listas carregadas</p>
             </div>
          
+<div id="janelaSobre" class="sobre">
+<div class="conteudoSobre">
+    <h1>Sobre o CarolFlix</h1>
+<p> Bem vindo ao CarolFlix! Aqui você pode classificar os filmes e séries que você já assistiu ou tem interesse em assistir. Escolha uma categoria para seu filme/série e ele irá direto para a página daquela categoria. Suas listas são salvas automaticamente.</p>
+<p>Carolina Braga - Inf 1A</p>
+<button id="fecharbtn">Fechar</button>
+</div>
+
+
+</div>
+
+
+
+
             <div class="conteudos">
                 <div class="item">
                     <img class="poster" src="filmes/capitaoamerica.jpg" />
@@ -186,7 +201,60 @@
                         <option value="Quero-assistir">Quero Assistir</option>
                     </select>
                 </div>
-
+                <div class="item">
+                    <img class="poster" src="filmes/AntMan.jpg" />
+                    <select class="classificacao">
+                        <option value=" ">Selecione uma categoria</option>
+                        <option value="fav">Favorito</option>
+                        <option value="assistido">Assistido</option>
+                        <option value="Quero-assistir">Quero Assistir</option>
+                    </select>
+                </div>
+                <div class="item">
+                    <img class="poster" src="filmes/Avengers3.jpg" />
+                    <select class="classificacao">
+                        <option value=" ">Selecione uma categoria</option>
+                        <option value="fav">Favorito</option>
+                        <option value="assistido">Assistido</option>
+                        <option value="Quero-assistir">Quero Assistir</option>
+                    </select>
+                </div>
+                <div class="item">
+                    <img class="poster" src="filmes/DoctorStrange2_Alt.jpg" />
+                    <select class="classificacao">
+                        <option value=" ">Selecione uma categoria</option>
+                        <option value="fav">Favorito</option>
+                        <option value="assistido">Assistido</option>
+                        <option value="Quero-assistir">Quero Assistir</option>
+                    </select>
+                </div>
+                <div class="item">
+                    <img class="poster" src="filmes/GuardiansOfTheGalxaxy.jpg" />
+                    <select class="classificacao">
+                        <option value=" ">Selecione uma categoria</option>
+                        <option value="fav">Favorito</option>
+                        <option value="assistido">Assistido</option>
+                        <option value="Quero-assistir">Quero Assistir</option>
+                    </select>
+                </div>
+                <div class="item">
+                    <img class="poster" src="filmes/TheMarvels.jpg" />
+                    <select class="classificacao">
+                        <option value=" ">Selecione uma categoria</option>
+                        <option value="fav">Favorito</option>
+                        <option value="assistido">Assistido</option>
+                        <option value="Quero-assistir">Quero Assistir</option>
+                    </select>
+                </div>
+                <div class="item">
+                    <img class="poster" src="filmes/Thor3.jpg" />
+                    <select class="classificacao">
+                        <option value=" ">Selecione uma categoria</option>
+                        <option value="fav">Favorito</option>
+                        <option value="assistido">Assistido</option>
+                        <option value="Quero-assistir">Quero Assistir</option>
+                    </select>
+                </div>
                 <div class="item">
                     <img class="poster" src="series/b99.jpg" />
                     <select class="classificacao">
@@ -233,7 +301,34 @@
                     </select>
                 </div>
                 <div class="item">
+                    <img class="poster" src="series/tedlasso.jpg" />
+                    <select class="classificacao">
+                        <option value=" ">Selecione uma categoria</option>
+                        <option value="fav">Favorito</option>
+                        <option value="assistido">Assistido</option>
+                        <option value="Quero-assistir">Quero Assistir</option>
+                    </select>
+                </div>
+                <div class="item">
                     <img class="poster" src="series/thebear.jpg" />
+                    <select class="classificacao">
+                        <option value=" ">Selecione uma categoria</option>
+                        <option value="fav">Favorito</option>
+                        <option value="assistido">Assistido</option>
+                        <option value="Quero-assistir">Quero Assistir</option>
+                    </select>
+                </div>
+                <div class="item">
+                    <img class="poster" src="series/IAmGroot.jpg" />
+                    <select class="classificacao">
+                        <option value=" ">Selecione uma categoria</option>
+                        <option value="fav">Favorito</option>
+                        <option value="assistido">Assistido</option>
+                        <option value="Quero-assistir">Quero Assistir</option>
+                    </select>
+                </div>
+                <div class="item">
+                    <img class="poster" src="series/WhatIf.jpg" />
                     <select class="classificacao">
                         <option value=" ">Selecione uma categoria</option>
                         <option value="fav">Favorito</option>
@@ -252,6 +347,15 @@
                 </div>
                 <div class="item">
                     <img class="poster" src="series/senna.jpg" />
+                    <select class="classificacao">
+                        <option value=" ">Selecione uma categoria</option>
+                        <option value="fav">Favorito</option>
+                        <option value="assistido">Assistido</option>
+                        <option value="Quero-assistir">Quero Assistir</option>
+                    </select>
+                </div>
+                <div class="item">
+                    <img class="poster" src="series/TheFalconAndTheWinterSoldier_Alt.jpg" />
                     <select class="classificacao">
                         <option value=" ">Selecione uma categoria</option>
                         <option value="fav">Favorito</option>
